--- a/org/health_ent.org
+++ b/org/health_ent.org
@@ -25,3 +25,11 @@
 [2011-09-22 Thu 12:54]
 [[file:~/.emacs.d/tp/tradeplan.el]]
 东三环北路 38 号院 1号楼 15层.
+
+** 健身计划.
+   第一天:
+	- 热身 5分钟. 跑步机. 3lvl 
+	- 拉背，推胸.  交叉做 每个 4组. 每组 12-15个. 一套下来休息30秒.
+	- 腹部 耐力 4 组每组 20个  每组休息间隔 30 秒.
+	  
+   
