--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -274,7 +274,7 @@ alibaba
 
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
-  CLOCK: [2011-11-07 Mon 09:53]
+  CLOCK: [2011-11-07 Mon 09:53]--[2011-11-16 Wed 09:01] => 215:08
   :END:
 [2011-11-07 Mon 09:53]
 
@@ -299,3 +299,14 @@ HSI 指数分析.
 1. 如果美元指数走强，本来是可以说明djs 走强。 但是美元强弱除了美元自身
    还有就是和其他非美货币的对比. 比如。如果其他非美，尤其欧元相对更弱.
    那么只能说明一点，那就是全球的经济还是处于危机当中，
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-11-16 Wed 09:01]--[2011-11-16 Wed 09:43] =>  0:42
+  :END:
+[2011-11-16 Wed 09:01]
+
+日内短线做多瑞郎. 由于其他美元指数处于短线震荡区间的强阻力. 做多瑞郎
+
+仓位条件，小仓.  持仓时间不超过一天. 目标稍微保守一些，如果在进场前
+
+行情出现新高，撤销交易. 大概进场时间在下午 3点左右.
