--- a/org/health_ent.org
+++ b/org/health_ent.org
@@ -31,5 +31,8 @@
 	- 热身 5分钟. 跑步机. 3lvl 
 	- 拉背，推胸.  交叉做 每个 4组. 每组 12-15个. 一套下来休息30秒.
 	- 腹部 耐力 4 组每组 20个  每组休息间隔 30 秒.
+	  有氧运动可以加速乳酸代谢.
+	  喝水可以加速乳酸代谢.
 	  
    
+ 
