--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -286,3 +286,12 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
 
 (* 512  30000)
 (/ 15000 1800)
+
+
+关于alibaba 目前布局仓位 61000 股。 成本 8.7 左右。 
+
+接下来如果 alibaba 继续下行，至 6.3 附近考虑继续购买 2w 股。
+
+如果接下来 alibaba 上行至
+
+(/ 5.09 6.780)
