--- a/org/opsdocs.org
+++ b/org/opsdocs.org
@@ -14,3 +14,24 @@
 *** 流程
 *** 常用的操作方法
 ** gemstone/cmos
+
+
+
+
+* 2012年11月6日11：00~19：00进行11月份机房容灾演练
+
+包括非低峰时间的tbsession Tair 、cookie切换，重点是在
+18:00~18:30模拟CM3机房（一期）APP断网30分钟的场景，
+验证在非低峰时间CM3机房断网后CM4机房的工作能力，演练全程
+需要琳娜、加明和所有PE在场。
+
+
+11-6，16:00~17:30 通过GTM将CM3所有与交易相关的应用的全部流量切到CM4；-琳娜
+11-6，18:30~19:00 恢复GTM配置，将所有流量切回至CM3。-琳娜
+
+
+tfs083121.cm4
+@荆磊 autofixing
+aliyun 也有一个 autofixing . 在源里的autofixing 包是已经没人维护的包。
+实际有4快盘怀了. 处理办法重新clone.
+
